# Schwarzschild-RTX-Real-Time-Relativistic-Spacetime-Engine

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: main.cpp
src/core/: camera.hpp  display.hpp  renderer.hpp
src/math/: Vec3.hpp  Vec4.hpp
src/physics/: raytracer.hpp  schwarzschild.hpp
src/shaders/: blackhole.frag  blackhole.vert  bloom_blur.frag  bloom_final.frag
tests/: CMakeLists.txt
tests/math/: vec3_test.cpp  vec4_test.cpp
tests/physics/: physics_test.cpp
